[tool.poetry]
name = "castaways-bot"
version = "0.1.0"
description = ""
authors = ["Ruslan Zinnatov <rh26157@gmail.com>"]
readme = "README.md"
packages = [{include = "castaways_bot"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
